# kaloscope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSES.md  PR_DESCRIPTION.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report.zh-CN.yml  feature_request.yml  feature_request.zh-CN.yml
.github/workflows/: release.yml
backend/: .gitignore  pyproject.toml
backend/app/: __init__.py  config.toml  main.py
backend/app/core/: config.py  constants.py  cookiejar.py  decorators.py  exceptions.py  middleware.py  monkeypatch.py  network.py  notifications.py  renderer.py
backend/app/core/dl/: adapter.py  syncer.py
backend/app/core/flow/: context.py  engine.py  fetcher.py  syncer.py
backend/app/core/flow/fields/: __init__.py  base.py  code.py  divider.py  kvpairs.py  number.py  script.py  select.py  text.py  textarea.py  toggle.py  url.py
backend/app/core/flow/handles/: __init__.py  base.py  input.py  output.py
backend/app/core/flow/nodes/: __init__.py  base.py
backend/app/core/flow/nodes/control/: condition.py  loop.py  merge.py
backend/app/core/flow/nodes/end/: auth.py  board.py  details.py  download.py  manual.py  schedule.py  search.py
backend/app/core/flow/nodes/general/: __init__.py  http.py  script.py  text.py  variables.py
backend/app/core/flow/nodes/nfo/: album.py  artist.py  episode.py  movie.py  tvshow.py
backend/app/core/flow/nodes/start/: auth.py  board.py  details.py  download.py  ingest.py  manual.py  schedule.py  search.py
backend/app/core/media/: shelver.py  watcher.py
backend/app/core/media/filters/: __init__.py  base.py  movie.py  music.py  tvshow.py
backend/app/core/media/handlers/: __init__.py  base.py  movie.py  tvshow.py
backend/app/core/media/parsers/: __init__.py  base.py  movie.py  music.py  tvshow.py
backend/app/migrations/: 0001_initial.py  0002_auto_20260518_1049.py  0004_user_media_progress.py
backend/app/migrations/models/: 0_20250826142436_init.py
backend/app/models/: __init__.py  base.py  download.py  flow.py  general.py  media.py  network.py  user.py
backend/app/routes/: auth.py  code.py  config.py  danmaku.py  download.py  filesystem.py  flow.py  image.py  media.py  network.py  notification.py  system.py  user.py  variable.py
backend/app/services/: base.py  config.py  danmaku.py  download.py  flow.py  media.py  network.py  subtitle.py  user.py  variable.py
backend/app/utils/: bittorrent.py  crypto.py  deep.py  dict.py  disk.py  extractor.py  importer.py  json.py  proxy.py  subtitle.py  transcode.py  xml.py
backend/static/downloaders/: Aria2.yaml  Transmission.yaml  qBittorrent.yaml
backend/static/templates/: episode.nfo  movie.nfo  tvshow.nfo
backend/static/templates/conf/: auth.yaml  board.yaml  details.yaml  search.yaml
backend/static/templates/nfo/: movie.nfo
backend/tests/: test_core_flow_script.py  test_core_middleware.py  test_core_monkeypatch.py  test_core_renderer.py  test_services_subtitle.py  test_services_user_progress.py  test_utils_crypto.py  test_utils_extractor.py  test_utils_numeral.py  test_utils_subtitle.py
frontend/: .gitignore  .prettierignore  .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pwa-assets.config.ts  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  (+2 more)
scripts/: bump_version.py  debug_detector.py  scan_packages.py
(+182 files in other folders)
