[project]
name = "kaloscope-backend"
version = "0.0.1"
description = "Backend for Kaloscope project"
authors = [{ name = "Xylitol", email = "jam.xylitol@gmail.com" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13,<4.0"
dependencies = [
  "sanic[ext] (>=25.3.0,<26.0.0)",
  "pydantic[email] (>=2.12.3,<3.0.0)",
  "tortoise-orm[accel] (>=0.25.1,<0.26.0)",
  "aerich[toml] (>=0.9.2,<0.10.0)",
  "httpx[brotli,http2,socks,zstd] (>=0.28.1,<0.29.0)",
  "dnspython (>=2.8.0,<3.0.0)",
  "apscheduler (>=3.11.0,<4.0.0)",
  "watchdog (>=6.0.0,<7.0.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "orjson (>=3.11.3,<4.0.0)",
  "jsonpath-ng (>=1.7.0,<2.0.0)",
  "lxml (>=6.0.2,<7.0.0)",
  "lxml-stubs (>=0.5.1,<0.6.0)",
  "pyyaml (>=6.0.3,<7.0.0)",
  "stpyv8 (>=13.1.201.22,<14.0.0.0)",
  "aiofiles (>=25.1.0,<26.0.0)",
  "autopep8 (>=2.3.2,<3.0.0)",
  "opencc (>=1.1.9,<2.0.0)",
  "torrentool (>=1.2.0,<2.0.0)",
  "gitpython (>=3.1.45,<4.0.0)"
]

[tool.poetry]
# set to true to use tortoise/aerich for migrations
package-mode = true
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
pytest = "^8.4.2"
pre-commit = "^4.3.0"
commitizen = "^4.9.1"
pip-licenses = "^5.5.0"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.aerich]
tortoise_orm = "app.main.tortoise_config"
location = "./app/migrations"
src_folder = "./app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
