[project]
name = "kaloscope-backend"
version = "0.3.8"
description = "Backend for Kaloscope project"
authors = [{ name = "Xylitol", email = "jam.xylitol@gmail.com" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13,<4.0"
dependencies = [
  "sanic[ext] (>=25.12.0,<26.0.0)",
  "pydantic[email] (>=2.13.4,<3.0.0)",
  "tortoise-orm[accel] (>=1.1.7,<2.0.0)",
  "httpx[http2,socks,brotli,zstd] (>=0.28.1,<0.29.0)",
  "hishel[async] (>=1.2.1,<2.0.0)",
  "dnspython (>=2.8.0,<3.0.0)",
  "apscheduler (>=3.11.2,<4.0.0)",
  "watchdog (>=6.0.0,<7.0.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "orjson (>=3.11.9,<4.0.0)",
  "jsonpath-ng (>=1.8.0,<2.0.0)",
  "lxml (>=6.1.1,<7.0.0)",
  "lxml-stubs (>=0.5.1,<0.6.0)",
  "pyyaml (>=6.0.3,<7.0.0)",
  "autopep8 (>=2.3.2,<3.0.0)",
  "aiofiles (>=25.1.0,<26.0.0)",
  "quickjs-rs (>=0.1.2,<0.2.0)",
  "pytz (>=2026.2,<2027.0)",
  "opencc (>=1.3.1,<2.0.0)",
  "gitpython (>=3.1.50,<4.0.0)",
  "torrentool (>=1.2.0,<2.0.0)",
  "send2trash (>=2.1.0,<3.0.0)",
]

[tool.poetry]
package-mode = false
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.14"
pytest = "^9.0.3"
pre-commit = "^4.6.0"
commitizen = "^4.16.2"
pip-licenses = "^5.5.5"

[tool.tortoise]
tortoise_orm = "app.main.tortoise_config"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = ["E", "F", "UP", "B", "SIM", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
